edited the EDA description in ML_steps notebook

--- a/machine-learning/ML_steps.ipynb
+++ b/machine-learning/ML_steps.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "There is a difference between Preprocessing and EDA (Exploratory data analysis).\n",
     "In Preprocessing, raw data is manipulated to prepare it for further analysis and modeling.\n",
-    "in EDA, data is visualized, analysed to further understand it."
+    "in EDA, insights into the data are gained by summarization, visualization and uncovering of relation between the variables ar"
    ]
   },
   {
